Added Vector3 and Vector4 + Added matrix classes Matrix3x3, Matrix4x4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(SDL main.cpp
         src/Shapes.cpp
         include/SDL/FramerateLimiter.hpp
         src/FramerateLimiter.cpp
+        include/SDL/Matrix.hpp
 )
 target_include_directories(SDL PUBLIC include)
 target_link_libraries(SDL SDL3 SDL3_image)
