Added a base Shape class + base Transformable Shape class + Transform class. Made Built-in shapes transformable. Fixed const-ness error in Matrix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,12 @@ add_executable(SDL main.cpp
         include/SDL/FramerateLimiter.hpp
         src/FramerateLimiter.cpp
         include/SDL/Matrix.hpp
+        include/SDL/Transformable.hpp
+        include/SDL/Shape.hpp
+        src/Shape.cpp
+        include/SDL/Transform.hpp
+        src/Transform.cpp
+        src/Transformable.cpp
 )
 target_include_directories(SDL PUBLIC include)
 target_link_libraries(SDL SDL3 SDL3_image)
